00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quorum-test
  labels:
    name: quorum-test
