03-quorum-services.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: quorum-test
  name: quorum-node1
  labels:
    app: qubernetes
    tier: backend
    name: quorum-node1
spec:
  selector:
    app: qubernetes
    tier: backend
    name: quorum-node1-deployment
  type: NodePort
  ports:
    - name: tm-manager 
      protocol: TCP
      port: 9001
      targetPort: 9001
    - name: tm-tessera-third-part
      protocol: TCP
      port: 9080
      targetPort: 9080
    - name: wsrpc-listener
      protocol: TCP
      port: 8546
      targetPort: 8546
    - name: quorum-listener
      protocol: TCP
      port: 21000
      targetPort: 21000
    - name: raft
      protocol: TCP
      targetPort: 50401
      port: 50401
---
apiVersion: v1
kind: Service
metadata:
  namespace: quorum-test
  name: quorum-node2
  labels:
    app: qubernetes
    tier: backend
    name: quorum-node2
spec:
  selector:
    app: qubernetes
    tier: backend
    name: quorum-node2-deployment
  type: NodePort
  ports:
    - name: tm-manager 
      protocol: TCP
      port: 9001
      targetPort: 9001
    - name: tm-tessera-third-part
      protocol: TCP
      port: 9080
      targetPort: 9080
    - name: wsrpc-listener
      protocol: TCP
      port: 8546
      targetPort: 8546
    - name: quorum-listener
      protocol: TCP
      port: 21000
      targetPort: 21000
    - name: raft
      protocol: TCP
      targetPort: 50401
      port: 50401
---
apiVersion: v1
kind: Service
metadata:
  namespace: quorum-test
  name: quorum-node3
  labels:
    app: qubernetes
    tier: backend
    name: quorum-node3
spec:
  selector:
    app: qubernetes
    tier: backend
    name: quorum-node3-deployment
  type: NodePort
  ports:
    - name: tm-manager 
      protocol: TCP
      port: 9001
      targetPort: 9001
    - name: tm-tessera-third-part
      protocol: TCP
      port: 9080
      targetPort: 9080
    - name: wsrpc-listener
      protocol: TCP
      port: 8546
      targetPort: 8546
    - name: quorum-listener
      protocol: TCP
      port: 21000
      targetPort: 21000
    - name: raft
      protocol: TCP
      targetPort: 50401
      port: 50401
